// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`renders correctly - no data, and not loading 1`] = `
<div>
  Initial State: no data, and not loading yet.
</div>
`;

exports[`renders correctly - with data 1`] = `
<pre>
  [
    {
      "dummy": "This is dummy data"
    }
  ]
</pre>
`;
